# DileptonAnalysis

./: README.md
AnaTrain/Run14AuAuLeptonComby/: Declarations.h  EmcalDeadMap.txt  IsCentralSupportCut.C  Makefile.am  MyEvent.C  MyEvent.h  MyEventConstants.h  MyEventLinkDef.h  QACuts.C  Reconstruction.cpp  Reconstruction.h  ReconstructionLinkDef.h  Run14AuAuLeptonCombyConstants.h  Run14AuAuLeptonCombyCutter.C  Run14AuAuLeptonCombyCutter.h  Run14AuAuLeptonCombyEnum.h  Run14AuAuLeptonCombyHistos.C  Run14AuAuLeptonCombyHistos.h  Run14AuAuLeptonCombyLinkDef.h  Run14AuAuLeptonCombyReco.C  Run14AuAuLeptonCombyReco.h  Run_Run14AuAuLeptonComby.C  SectorBySector.txt  WalkCorrection.txt  configure.ac  runs.txt
ML/: CreateDB.ipynb  GradientBoosting.ipynb  GradientBoostingConv.ipynb  GradientBoostingDalitz.ipynb  GradientBoostingHits.ipynb  GradientBoostingMasha.ipynb  GradientBoosting_eID.ipynb  GradientBoosting_eID_new.ipynb  GradientBoosting_eID_xgboost.ipynb  HW1_Masha.ipynb  HW1_Masha_original.ipynb  ID.ipynb  PandaConverter.ipynb  PandaConverter_HitAss.ipynb  eID.ipynb
PhenixSim/: Condor_submit_Run_it_all.job  Run_it_all.csh  kek.sh  makeEmbedSimDST_14.csh  pisaToPisaDST.csh  pisa_preporator.sh  run_DA.sh  run_SimFrac.job  run_SimFrac.sh  run_sim_single.job  run_sim_single.sh  setup.csh
PhenixSim/embed/svx_cent_ana/source/: AnaCompactCNT.C  AnaCompactCNT.h  AnaNtpTrkPair.C  AnaNtpTrkPair.h  DebugTest.C  DebugTest.h  Makefile.am  MyEvent.C  MyEvent.h  MyEventConstants.h  MyEventLinkDef.h  QACuts.C  ReadNtpCntTrk.C  ReadNtpCntTrk.h  Run14AuAuLeptonCombyConstants.h  SvxCentralTrackRecoDebug.C  SvxCentralTrackRecoDebug.h  SvxCheckCluster.C  SvxCheckCluster.h  SvxCheckCompactCNT.C  SvxCheckCompactCNT.h  SvxRpQA.C  SvxRpQA.h  SvxanaPair.C  SvxanaPair.h  SvxanaPairDisp.C  SvxanaPairDisp.h  configure.ac  configure.in  embedana.cc  embedana.h  embedanaLinkDef.h  embeddisp.cc  embeddisp.h  svxana.cc  svxana.h  svxana_akiba.cc  svxanamini.cc  svxanamini.h  svxcentanaLinkDef.h  (+8 more)
PhenixSim/make_sim/: make_single.C
PhenixSim/pisa_svx/: finishPisa  fort.33  gintphnx.hbk  glogon.kumac  glogon.tmp  phnx.par  pisa.input  pisa.kumac  pisaToDSTLinker.csh  pisaToDST_IOManager.C  pisaToDST_VTX.C
PhenixSim/real/dstmerge/source/: AnalysisDict.C  AnalysisDict.h  AnalysisLinkDef.h  DstMerger.cc  DstMerger.h  Makefile.am  SkipEvents.cc  SkipEvents.h  autogen.sh  configure.in
PhenixSim/test_embed/: Fun4All_embedeval_Serega.C  Fun4All_embedeval_svx_hach.C  Fun4CA_Embed.C  OutputManager_Embed.C  embed.C  embed_IOManager.C  emc_embed_preporator.sh  runCondor.csh  run_DA.job  run_emc_embed.job  run_emc_embed.sh  runembed.C  (+2 more)
QA/: DCA_fitter_rungroups_AuAu.ipynb  DCA_plotter_AuAu.ipynb  GHOST_fitter_rungroups_AuAu.ipynb  d_delta_fitter_rungroups_AuAu.ipynb  d_delta_plotter_AuAu.ipynb  delta_fitter_rungroups_AuAu.ipynb  delta_fitter_rungroups_AuAu_new.ipynb  dphi0_offset_fitter_rg.ipynb  dynamic_delta_fitter_AuAu_iter_sigma.ipynb  dynamic_delta_fitter_AuAu_iter_sigma_old.ipynb  dynamic_delta_fitter_rungroups_AuAu.ipynb  dynamic_delta_fitter_rungroups_AuAu_iter.ipynb  dynamic_delta_fitter_rungroups_AuAu_sigma.ipynb  dynamic_delta_fitter_rungroups_AuAu_v1.ipynb  emcal_hot_maps.ipynb  misalignment_fitter.ipynb  misalignment_fitter_rg.ipynb  misalignment_fitter_rg_zed.ipynb  misalignment_fitter_zed.ipynb  rich_emcal_qa.ipynb
TTreeAnalyzer/: CondorRunner.sh  Merge.csh  MultiRun.sh  NewHitAssociation.C  NewHitAssociation.h  merge.csh  myvalgrind.csh  run.csh  run_NewHitToLeptonAssociation.sh  source.csh
VTXalignment/: dca_phi_z_fitter.ipynb  dca_tot_phi_z_fitter.ipynb  delta_fitter_AuAu.ipynb  delta_fitter_AuAu_std.ipynb
dca/: dalitz.ipynb  dalitz_yields.ipynb  dalitz_yields1.ipynb  m_ee_bg.ipynb  m_ee_cuts.ipynb  m_ee_decomposer.ipynb  m_ee_decomposer1.ipynb  m_ee_decomposer2.ipynb  m_ee_decomposer3.ipynb  m_ee_decomposer4.ipynb  m_ee_decomposer5.ipynb  m_ee_decomposer6.ipynb  m_ee_decomposer7.ipynb  m_ee_decomposer8.ipynb  m_ee_decomposer9.ipynb  m_ee_decomposition.ipynb  m_ee_res.ipynb  qcd.ipynb  single_DCA_fitter.ipynb
flow/: v2.ipynb
m_ee_fit/: DCA_new_plotter.ipynb  DCA_plotter.ipynb  DCA_plotter1.ipynb  DCA_plotter2.ipynb  QA_m_ee_DCA_plotter.ipynb  compact_m_ee_DCA_plotter.ipynb  compact_m_ee_DCA_plotter1.ipynb  compact_m_ee_DCA_plotter2.ipynb  compact_m_ee_DCA_plotter3.ipynb  compact_m_ee_DCA_plotter4.ipynb  compact_m_ee_DCA_plotter5.ipynb  m_ee_DCA_saver.ipynb  m_ee_decomposition.ipynb  m_ee_plotter.ipynb  m_ee_plotter2.ipynb  m_ee_plotter3.ipynb  m_ee_plotter4.ipynb  m_ee_plotter5.ipynb  m_ee_plotter6.ipynb  m_ee_plotter_DCA.ipynb  m_ee_plotter_DCA1.ipynb  m_ee_plotter_DCA2.ipynb  m_ee_plotter_DCA3.ipynb  m_ee_saver.ipynb  new_m_ee_DCA_plotter.ipynb
pairQA/: delta_plotter_AuAu.ipynb  hit_assoc_qa.ipynb  hit_assoc_qa_html.ipynb  second_hit_qa.ipynb  sim_ddhit_assoc.ipynb  sim_ddhit_assoc_html.ipynb  sim_pair_dca.ipynb  sim_pair_dca_html.ipynb  sim_pair_dca_interactive.ipynb  sim_pair_qa.ipynb  weight_for_bg.ipynb
recoeff/: m_ee_compar.ipynb  m_ee_compar2.ipynb  m_ee_compar3.ipynb  m_ee_compar4.ipynb  m_ee_compar5.ipynb  m_ee_ratio.ipynb  recoeff.ipynb  recoeff1.ipynb
sim/: Calib.C  Calib.h  HitAssociation.C  HitAssociation.h  InvMass.C  InvMass.h  MultiRun_Calib.sh  MultiRun_InvMass.sh  MyEvent_OLD.C  MyEvent_OLD.h  NewHitAssociation.C  NewHitAssociation.h  Testm2.C  dalitz_gen.ipynb  pt_spectrum.ipynb  run_Calib.sh  run_InvMass.sh
sngl/: DCA.ipynb  DCA_electrons.ipynb  DCA_hadrons.ipynb  bremsstrahlung.ipynb  conv_dalitz_finder_qa.ipynb  electron_hadron.ipynb  ml_conv_dalitz_finder_qa.ipynb  pt_new_qa.ipynb  rich_emcal_qa.ipynb  sngl_qa.ipynb  test_my_m_ee_DCA_plotter.ipynb  track_decomposition.ipynb  track_decomposition_conv.ipynb
syst/: dalitz_phenix.ipynb  estimate.ipynb  phenix_cock_recoeff.ipynb  star_cock.ipynb  star_cock1.ipynb  star_cock_combiner.ipynb  star_cock_updated.ipynb  uni_cock.ipynb
talks/: meeting.ipynb  meeting_sim.ipynb  test.ipynb
vertex/: emcal_run.ipynb  mass_run.ipynb  pt_run.ipynb  vertex_qa.ipynb  vertex_reco.ipynb  vertex_reco_v1.ipynb  vertex_run.ipynb
(+161 files in other folders)
