AC_INIT(svx_cnt_ana, 1.00)
AC_CONFIG_SRCDIR(configure.ac)

AM_INIT_AUTOMAKE(ANADST, 1.00)
PACKAGE_INCLUDE_DIR=AC_PACKAGE_NAME
AC_SUBST(PACKAGE_INCLUDE_DIR)

AC_PROG_CXX(CC g++)
AC_ENABLE_STATIC(no)
AC_PROG_LIBTOOL

if test $ac_cv_prog_gxx = yes; then
   CXXFLAGS="$CXXFLAGS -Wall -Werror"
fi

AC_OUTPUT(Makefile)
